refactor: move http requests structs to common/dto.go
